--- a/spring-boot-samples/spring-boot-sample-web-ui/src/main/resources/templates/messages/list.html
+++ b/spring-boot-samples/spring-boot-sample-web-ui/src/main/resources/templates/messages/list.html
@@ -3,10 +3,10 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Messages : View all</title>
+<title>Messages : view hear</title>
 </head>
 <body>
-	<h1 layout:fragment="header">Messages : View all</h1>
+	<h1 layout:fragment="header">Messages : View hear</h1>
 	<div layout:fragment="content" class="container">
 		<div class="pull-right">
 			<a href="form.html" th:href="@{/(form)}">Create Message</a>
