--- a/spring-boot-samples/spring-boot-sample-web-ui/src/main/resources/templates/messages/view.html
+++ b/spring-boot-samples/spring-boot-sample-web-ui/src/main/resources/templates/messages/view.html
@@ -5,7 +5,7 @@
 <title>Messages : View</title>
 </head>
 <body>
-	<h1 layout:fragment="header">Messages : Create</h1>
+	<h1 layout:fragment="header">DevOps Training : Create</h1>
 	<div layout:fragment="content" class="container">
 		<div class="alert alert-success" th:if="${globalMessage}"
 			th:text="${globalMessage}">Some Success message</div>
