--- a/spring-boot-samples/spring-boot-sample-web-ui/src/main/resources/templates/messages/view.html
+++ b/spring-boot-samples/spring-boot-sample-web-ui/src/main/resources/templates/messages/view.html
@@ -2,7 +2,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Messages : View</title>
+<title>DevOps Training : View</title>
 </head>
 <body>
 	<h1 layout:fragment="header">DevOps Training : Create</h1>
